--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,15 @@
 {
+  "version": 2,
   "builds": [
     {
       "src": "backend/server.js",
       "use": "@vercel/node"
     }
   ],
-  "rewrites": [
+  "routes": [
     {
-      "source": "/api/(.*)",
-      "destination": "/backend/server.js"
+      "src": "/api/(.*)",
+      "dest": "/backend/server.js"
     }
   ]
 }
