--- a/vercel.json
+++ b/vercel.json
@@ -6,10 +6,7 @@
       "use": "@vercel/node"
     }
   ],
-  "routes": [
-    {
-      "src": "/api/(.*)",
-      "dest": "/backend/server.js"
-    }
+  "rewrites": [
+    { "source": "/api/(.*)", "destination": "/backend/server.js" }
   ]
 }
