Fix: Correct vercel.json and update server logic

--- a/vercel.json
+++ b/vercel.json
@@ -2,23 +2,14 @@
   "version": 2,
   "builds": [
     {
-      "src": "backend/server.js",
+      "src": "server.js",
       "use": "@vercel/node"
-    },
-    {
-      "src": "*.html",
-      "use": "@vercel/static"
-    },
-    {
-      "src": "*.css",
-      "use": "@vercel/static"
-    },
-    {
-      "src": "*.js",
-      "use": "@vercel/static"
     }
   ],
   "rewrites": [
-    { "source": "/api/(.*)", "destination": "/backend/server.js" }
+    {
+      "source": "/(.*)",
+      "dest": "/server.js"
+    }
   ]
 }
