--- a/.env
+++ b/.env
@@ -2,4 +2,5 @@
 # Replace with your actual Gmail credentials
 # For Gmail, use an App Password instead of your regular password
 EMAIL_USER=pradeepanm2006gmail.com
-EMAIL_PASS=Tajmahal@6
+EMAIL_PASS=hcqo jpie dlwn mkjy
+
